--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ header {
     position: absolute;
     right: 10px;
     top: 25px;
+    cursor: pointer;
     display: none;
 }
 
@@ -182,7 +183,25 @@ header {
     display: none;
 }
 
-.tagBtn {
+.item {
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.selectedItem {
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    margin-right: 10px;
+    cursor: default;
+}
+
+/* .tagBtn {
     margin-right: 10px;
     background: none;
     border: none;
@@ -193,8 +212,8 @@ header {
     text-align: left;
     padding: 3px 0;
     white-space: nowrap;
-    cursor: pointer;
-}
+    cursor: default;
+} */
 
 .tagBtn_selected {
     color: white;
@@ -309,7 +328,7 @@ header {
     font-size: 12px;
     font-weight: 700;
     width: 150px;
-    height: 110px;
+    height: 92px;
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -324,7 +343,7 @@ header {
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
     font-weight: 400;
-    height: 100px;
+    height: 98px;
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0;
